--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -1,2 +1,5 @@
 <h1>GrowthCurveSample#index</h1>
 <p>Find me in app/views/growth_curve_sample/index.html.erb</p>
+
+<canvas id="myChart" width="400" height="400"></canvas> ←★追記
+<script>draw_graph();</script>
