--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -1,5 +1,5 @@
-<h1>GrowthCurveSample#index</h1>
-<p>Find me in app/views/growth_curve_sample/index.html.erb</p>
+<h1>成長のきろく</h1>
+<%# <p>Find me in app/views/growth_curve_sample/index.html.erb</p> %>
 
 <canvas id="myChart" width="200" height="100"></canvas>
 <script>draw_graph();</script>
