--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -3,3 +3,49 @@
 
 <canvas id="myChart" width="200" height="100"></canvas>
 <script>draw_graph();</script>
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     月齢
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">0ヶ月</a>
+    <a class="dropdown-item" href="#">1ヶ月</a>
+    <a class="dropdown-item" href="#">2ヶ月</a>
+    <a class="dropdown-item" href="#">3ヶ月</a>
+    <a class="dropdown-item" href="#">4ヶ月</a>
+    <a class="dropdown-item" href="#">5ヶ月</a>
+    <a class="dropdown-item" href="#">6ヶ月</a>
+    <a class="dropdown-item" href="#">7ヶ月</a>
+    <a class="dropdown-item" href="#">8ヶ月</a>
+    <a class="dropdown-item" href="#">9ヶ月</a>
+    <a class="dropdown-item" href="#">10ヶ月</a>
+    <a class="dropdown-item" href="#">11ヶ月</a>
+    <a class="dropdown-item" href="#">12ヶ月</a>
+
+  </div>
+</div>
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    身長
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    体重
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
+
+<button type="button" class="btn btn-primary">記録する</button>
