--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -1,51 +1,38 @@
-<h1>成長のきろく</h1>
-<%# <p>Find me in app/views/growth_curve_sample/index.html.erb</p> %>
+<div class="container-fruid mt-5">
+    <div class="row">
+        <div class="col-xl-8 offset-xl-1">
+            <canvas id="myChart" width="250" height="150"></canvas>
+            <script>draw_graph();</script>
+        </div>
 
-<canvas id="myChart" width="200" height="100"></canvas>
-<script>draw_graph();</script>
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-     月齢
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">0ヶ月</a>
-    <a class="dropdown-item" href="#">1ヶ月</a>
-    <a class="dropdown-item" href="#">2ヶ月</a>
-    <a class="dropdown-item" href="#">3ヶ月</a>
-    <a class="dropdown-item" href="#">4ヶ月</a>
-    <a class="dropdown-item" href="#">5ヶ月</a>
-    <a class="dropdown-item" href="#">6ヶ月</a>
-    <a class="dropdown-item" href="#">7ヶ月</a>
-    <a class="dropdown-item" href="#">8ヶ月</a>
-    <a class="dropdown-item" href="#">9ヶ月</a>
-    <a class="dropdown-item" href="#">10ヶ月</a>
-    <a class="dropdown-item" href="#">11ヶ月</a>
-    <a class="dropdown-item" href="#">12ヶ月</a>
-
-  </div>
-</div>
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    身長
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    体重
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-  </div>
-</div>
-
-<button type="button" class="btn btn-primary">記録する</button>
+        <div class="col-xl-3">
+            <%# form-horizontal...表示領域の幅に応じて、ラベルとフォーム部品を水平に並べる %>
+            <%# form要素のclass属性にform-horizontalを指定する。 %>
+            <form class="form-horizontal">
+                <%# ラベルとフォーム部品を、class属性にform-groupを指定したdiv要素で括る。 %>
+                <div class="form-group">
+                    <label class="control-label col-lg-3">月齢</label>
+                    <div class="col-lg-6">
+                        <input type="text" name="name" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-3">身長</label>
+                    <div class="col-lg-6">
+                        <input type="text" name="name" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-3">体重</label>
+                    <div class="col-lg-6">
+                        <input type="text" name="name" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-3">
+                        <button type="button" class="btn btn-warning btn-lg mt-3">記録する</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
