growth_recordテーブルを作成した

--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fruid mt-5">
     <div class="row">
-        <div class="col-xl-8 offset-xl-1">
+        <div class="col-xs-12 col-xl-8 offset-xl-1">
             <canvas id="myChart" width="250" height="150"></canvas>
             <script>draw_graph();</script>
         </div>
@@ -13,6 +13,7 @@
                 <div class="form-group">
                     <label class="control-label col-lg-3">月齢</label>
                     <div class="col-lg-6">
+                        <input type="text" name="name" class="form-control">
                         <input type="text" name="name" class="form-control">
                     </div>
                 </div>
