--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -5,35 +5,67 @@
             <script>draw_graph();</script>
         </div>
 
-        <div class="col-xl-3">
-            <%# form-horizontal...表示領域の幅に応じて、ラベルとフォーム部品を水平に並べる %>
-            <%# form要素のclass属性にform-horizontalを指定する。 %>
-            <form class="form-horizontal">
-                <%# ラベルとフォーム部品を、class属性にform-groupを指定したdiv要素で括る。 %>
-                <div class="form-group">
-                    <label class="control-label col-lg-3">月齢</label>
-                    <div class="col-lg-6">
-                        <input type="text" name="name" class="form-control">
-                        <input type="text" name="name" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-lg-3">身長</label>
-                    <div class="col-lg-6">
-                        <input type="text" name="name" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-lg-3">体重</label>
-                    <div class="col-lg-6">
-                        <input type="text" name="name" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-lg-3">
-                        <button type="button" class="btn btn-warning btn-lg mt-3">記録する</button>
-                    </div>
-                </div>
-            </form>
+        <div class="col-xl-3 growth-record-modal">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#growth-record-modal">
+            記録する
+          </button>
         </div>
     </div>
+
+<div id="growth-record-modal" class="modal fade bs-example-modal-new growth-record-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+
+  <div class="modal-dialog">
+
+    <!-- Modal Content: begins -->
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+      <div class="modal-title">成長記録</div>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+
+      <!-- Modal Body -->
+      <div class="modal-body">
+        <div class="body-message">
+          <%# form-horizontal...表示領域の幅に応じて、ラベルとフォーム部品を水平に並べる %>
+          <%# form要素のclass属性にform-horizontalを指定する。 %>
+          <form class="form-horizontal">
+            <%# ラベルとフォーム部品を、class属性にform-groupを指定したdiv要素で括る。 %>
+            <div class="form-group">
+              <label class="control-label col-lg-3">月齢</label>
+              <div class="col-lg-6">
+                <input type="text" name="name" class="form-control">
+                <input type="text" name="name" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-lg-3">身長</label>
+              <div class="col-lg-6">
+                <input type="text" name="name" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-lg-3">体重</label>
+              <div class="col-lg-6">
+                <input type="text" name="name" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-lg-4">
+                <button type="button" class="btn btn-warning btn-lg mt-3">記録する</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <!-- Modal Footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">閉じる</button>
+      </div>
+    </div>
+    <!-- Modal Content: ends -->
+  </div>
+</div>
+
