--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -35,6 +35,7 @@
             <div class="form-group">
               <label class="control-label col-lg-3">月齢</label>
               <%= f.text_field :age %>才
+              <%= f.text_field :age_of_the_moon %>ヶ月
             </div>
 
             <div class="form-group">
