--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -1,4 +1,21 @@
 <div class="container-fruid mt-5">
+  <% if flash[:success].present? %>
+    <div class="alert alert-success" role="alert">
+      <%= flash[:success] %>
+    </div>
+  <% end %>
+  <% if flash[:error].present? %>
+    <div class="alert alert-danger" role="alert">
+      <%= flash[:error] %>
+      <ul>
+        <% flash[:error_messages].each do |_column, messages| %>
+          <% messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
     <div class="row">
         <div class="col-xs-12 col-xl-8 offset-xl-1">
             <canvas id="myChart" width="250" height="150"></canvas>
@@ -44,7 +61,7 @@
                 <%= f.text_field :weight %>
               </div>
             </div>
-            
+
             <div class="form-group">
               <label class="control-label col-lg-3">身長</label>
               <div class="col-lg-6">
