フォームのレイアウト修正

--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -51,8 +51,10 @@
 
             <div class="form-group">
               <label class="control-label col-lg-3">月齢</label>
-              <%= f.text_field :age %>才
-              <%= f.text_field :age_of_the_moon %>ヶ月
+              <div class="col-lg-6">
+                <%= f.text_field :age %>才
+                <%= f.text_field :age_of_the_moon %>ヶ月
+              </div>
             </div>
 
             <div class="form-group">
