年齢スライド制御表示機能を追加
Fix #33
Close #37

--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -16,6 +16,9 @@
       </ul>
     </div>
   <% end %>
+  <h1 class="text-center">
+    <% age_slider %>
+  </h1>
     <div class="row">
         <div class="col-xs-12 col-xl-8 offset-xl-1">
             <canvas id="myChart" width="250" height="150"></canvas>
