成長記録編集・削除ページの追加
Close #39

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,3 +71,14 @@
 }
 #growth_record_height {
 }
+
+#growth_record__edit {
+  position: relative;
+  border-collapse: collapse;
+}
+
+#growth-record__edit thead tr th {
+  background: #FEFEFE;
+  position: sticky;
+  top: 0;
+}
