--- a/app/views/growth_curve_sample/index.html.erb
+++ b/app/views/growth_curve_sample/index.html.erb
@@ -29,6 +29,9 @@
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#growth-record-modal">
             記録する
           </button>
+          <a href="<%= growth_curve_sample_edit_path %>">
+            <button type="button" class="btn btn-secondary">編集する</button>
+          </a>
         </div>
     </div>
 
